--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Configure CMake
       run: |
         # buildディレクトリへ生成
-        mkdir build
+        # mkdir build
         cd build
         # ビルド構成を作成
         cmake .. -G "Visual Studio 17 2022"
